# ChipXplore

./: .env  .gitignore  README.md  neo4j.sh
baselines/: README.md  din_sql.py  din_sql_prompts.py  mac_sql.py  opendb.py  pdk_db.py  vanilla_rag.py
config/: asap7nm.py  config.py  gf12.py  pdks.py  sky130.py  tsmc65nm.py
core/: runner.py  utils.py
core/agents/: agent.py  chipquery.py  cypher_chain.py  interpreter.py  planner.py  refiner.py  sql_chain.py  utils.py
core/database/: README.md  __init__.py  db_utils.py  sql.py  sql_lef.py  sql_lef_csv.py  sql_lib.py  sql_lib_csv.py  sql_tlef.py  sql_tlef_csv.py
core/eval/: cases.py  interwined_questions.py  metrics.py  test_lef.py  test_lib.py  test_set.py
core/graph_flow/: all_flow.py  design_flow.py  llm_compiler.py  pdk_flow.py  reasoner.py  states.py  tool_call.py  tools.py
core/parsers/design/: CMakeLists.txt  def2graph.py  design_parser.py  design_utils.py  parser.cpp  verilog_parser.py
core/stealth/: encrypt.py
database/: README.md  graphdb.py
dataset/: README.md  dataset_utils.py  generate.py  model.py  question_generator.py  subtopic_generator.py  verifier.py
dataset/subtopics/: lef_subtopics.py  lib_subtopics.py  subtopics.py  tlef_subtopics.py
eval/: interwined_questions.py  test_design_pdk.py  test_graph.py  test_tlef.py
frontend/: README.md  app.py  term.py
parsers/: __init__.py
parsers/design/: run.py
parsers/lef/: __init__.py  lef_parser.py  util.py
parsers/lib/: __init__.py
sft/: README.md  data.py  eval.py  finetune.py  model.py  utils.py
sft/cfg/: config.py
(+95 files in other folders)
